# paper_title_creator

./: .gitignore  README.md  gpt_paper_title.py  main.py  pyproject.toml  run_evaluation.py
helpers/: __init__.py  evaluation.py  llm_helpers.py  text_helpers.py
notebooks/: 20231118_filename_from_pdf.ipynb  20231118_nltk_expermentation.ipynb
test_set/: test_set.csv
