[project]
name = "gpt-paper-title"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.13"
dependencies = [
    "black>=25.1.0",
    "httpx==0.25.1",
    "loguru>=0.7.3",
    "openai==1.3.1",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.6.1",
]
